refactor(project): resolve warning from SonarQube
* LabelName: PascalCase -> SNAKE_CASE
* merging of duplicate logic methods
* remove System.out.println